--- a/views/index.ejs
+++ b/views/index.ejs
@@ -154,7 +154,7 @@
                            
                         </div>
                         <div class="header__btn ml-20 d-none d-sm-block">
-                           <a href="sign-up.html" class="e-btn">Join for free</a>
+                           <a href="/signup" class="e-btn">Join for free</a>
                         </div>
                         <div class="sidebar__menu d-xl-none">
                            <div class="sidebar-toggle-btn ml-30" id="sidebar-toggle">
@@ -720,7 +720,7 @@
                      <div class="course__item white-bg mb-30 fix">
                         <div class="course__thumb w-img p-relative fix">
                            <a href="course-details.html">
-                              <img src="public/images/course/course-6.jpg" alt="">
+                              <img src="/images/course/course-6.jpg" alt="">
                            </a>
                            <div class="course__tag">
                               <a href="#" class="pink">UX Design</a>
